--- a/atividadeavaliativa.html
+++ b/atividadeavaliativa.html
@@ -7,7 +7,6 @@ function calcularGastoMerenda(dias,quantidadeAlunos,valorRefeicao){
   return valorFinal;
 }
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,25 +15,24 @@ function calcularGastoMerenda(dias,quantidadeAlunos,valorRefeicao){
 <body>
   <h1>Cálculo de Gasto com Merenda Escolar</h1>
   
-  <form>
     <label for="dias">Número de dias do mês:</label>
-    <input type="number" id="dias" name="dias" required><br><br>
+    <input type="number" id="dias" name="dias">
   
     <label for="quantidadeAlunos">Quantidade de alunos da escola:</label>
-    <input type="number" id="quantidadeAlunos" name="quantidadeAlunos" required><br><br>
+    <input type="number" id="quantidadeAlunos" name="quantidadeAlunos">
   
     <label for="valorRefeicao">Valor da refeição por dia:</label>
-    <input type="number" id="valorRefeicao" name="valorRefeicao" step="0.01" required><br><br>
+    <input type="number" id="valorRefeicao" name="valorRefeicao">
   
     <input type="button" value="Calcular" onclick="calcularGasto()">
-  </form>
+  
   
   <div id="resultado"></div>
   
   <script>
     function calcularGasto() {
-      var dias = parseInt(document.getElementById('dias').value);
-      var quantidadeAlunos = parseInt(document.getElementById('quantidadeAlunos').value);
+      var dias = parseFloat(document.getElementById('dias').value);
+      var quantidadeAlunos = parseFloat(document.getElementById('quantidadeAlunos').value);
       var valorRefeicao = parseFloat(document.getElementById('valorRefeicao').value);
   
       google.script.run.withSuccessHandler(exibirResultado).calcularGastoMerenda(dias, quantidadeAlunos, valorRefeicao);
@@ -42,7 +40,7 @@ function calcularGastoMerenda(dias,quantidadeAlunos,valorRefeicao){
   
     function exibirResultado(valorFinal) {
       var resultadoDiv = document.getElementById('resultado');
-      resultadoDiv.innerHTML = 'Valor Final: R$' + valorFinal.toFixed(2);
+      resultadoDiv.innerHTML = valorFinal;
     }
   </script>
 </body>
